Updated Relational Model (textile)

--- a/Relational-Model.textile
+++ b/Relational-Model.textile
@@ -4,7 +4,7 @@ sensor(+sensor_id+, type, #pixel_id -> pixel [UK,NN])
 node(+node_id+)
 rules(+rules_id+, operation, value, #rules_id -> rules)
 pixel(+pixel_id+, x_position, y_position)
-room(+room_id+, name, #room_id -> room)
+room(+room_id+, name, #node_id -> node)
 node_actuator(+node_actuator_id+, #node_id -> node, #actuator_id -> actuator, start_date, end_date)
 node_sensor(+node_sensor_id+, #node_id -> node, #sensor_id -> sensor, start_date, end_date)
 node_room(+#node_id -> node+, +#room_id -> room+, start_date, end_date)
