--- a/Relational-Model.textile
+++ b/Relational-Model.textile
@@ -2,16 +2,16 @@
 actuator(+actuator_id+, type, #pixel_id -> pixel [UK,NN])
 sensor(+sensor_id+, type, #pixel_id -> pixel [UK,NN])
 node(+node_id+)
-rules(+rules_id+, operation, value, #rules_id -> rules)
+rule(+rule_id+, operation, value, #rule_id -> rule)
 pixel(+pixel_id+, x_position, y_position)
 room(+room_id+, name, #node_id -> node)
 node_actuator(+node_actuator_id+, #node_id -> node, #actuator_id -> actuator, start_date, end_date)
 node_sensor(+node_sensor_id+, #node_id -> node, #sensor_id -> sensor, start_date, end_date)
 node_room(+#node_id -> node+, +#room_id -> room+, start_date, end_date)
-sensor_rules(+#sensor_id -> sensor+, +#rules_id -> rules+)
-actuator_rules(+#actuator_id -> actuator+, +#rules_id -> rules+)
-profiles(+profiles_id+, start_date, end_date)
-profile_rules(+#profiles_id -> profiles+, +#rules_id -> rules+)
+sensor_rule(+#sensor_id -> sensor+, +#rule_id -> rule+)
+actuator_rule(+#actuator_id -> actuator+, +#rule_id -> rule+)
+profile(+profile_id+, start_date, end_date)
+profile_rule(+#profile_id -> profile+, +#rule_id -> rule+)
 sensor_state(+sensor_state_id+, log_timestamp, sensor_value, #sensor_id ->  sensor)
 actuator_state(+actuator_state_id+,log_timestamp, actuator_value, #actuator_id ->  actuator)
 sensor_state_sensor(+#sensor_state_id -> sensor_state+, +#sensor_id -> sensor+)
