--- a/Relational-Model.textile
+++ b/Relational-Model.textile
@@ -1,6 +1,6 @@
 
-actuator(+actuator_id+, type, #pixel_id -> pixel [UK,NN])
-sensor(+sensor_id+, type, #pixel_id -> pixel [UK,NN])
+actuator(+actuator_id+, type, #pixel_id -> pixel [UK,NN], #sensor_state_id -> sensor_state[NN])
+sensor(+sensor_id+, type, #pixel_id -> pixel [UK,NN], #actuator_state_id -> actuator_state[NN])
 node(+node_id+)
 rule(+rule_id+, operation, value, #rule_id -> rule)
 pixel(+pixel_id+, x_position, y_position)
@@ -14,5 +14,3 @@ profile(+profile_id+, start_date, end_date)
 profile_rule(+#profile_id -> profile+, +#rule_id -> rule+)
 sensor_state(+sensor_state_id+, log_timestamp, sensor_value, #sensor_id ->  sensor)
 actuator_state(+actuator_state_id+,log_timestamp, actuator_value, #actuator_id ->  actuator)
-sensor_state_sensor(+#sensor_state_id -> sensor_state+, +#sensor_id -> sensor+)
-actuator_state_actuator(+#actuator_state_id -> actuator_state+, +#actuator_id -> actuator+)
